--- a/css/loading.css
+++ b/css/loading.css
@@ -1,27 +1,41 @@
+.loading-background {
+  background: lightblue;
+  display: block;
+  height: 100%;
+  left: 0;
+  opacity: .3;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 .spinner {
-    width: 40px;
-    height: 40px;
-    position: relative;
-    margin: 100px auto;
+  height: 100px;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  position: absolute;
+  top: 50%;
+  width: 100px;
 }
 
 .double-bounce1, .double-bounce2 {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
     background-color: #333;
+    border-radius: 50%;
+    height: 100%;
+    left: 0;
     opacity: 0.6;
     position: absolute;
     top: 0;
-    left: 0;
+    width: 100%;
 
     -webkit-animation: bounce 2.0s infinite ease-in-out;
-    animation: bounce 2.0s infinite ease-in-out;
+            animation: bounce 2.0s infinite ease-in-out;
 }
 
 .double-bounce2 {
     -webkit-animation-delay: -1.0s;
-    animation-delay: -1.0s;
+            animation-delay: -1.0s;
 }
 
 @-webkit-keyframes bounce {
